# FishScript

./: LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  build_macos.sh  build_windows.bat  main.py  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
fishscript/: __init__.py  cli.py  errors.py  ide.py  interpreter.py
fishscript/examples/: guessing_game.fish  hello.fish  lists_and_rituals.fish
installer/: FishScript.iss
website/: README.md  index.html  script.js  style.css
